Creacion de modelo Mueble - Conexion con PostgresSQL, migracion de datos, creacion de usuario

--- a/catalogo_muebles/mueblesemae/templates/display_mueble.html
+++ b/catalogo_muebles/mueblesemae/templates/display_mueble.html
@@ -12,7 +12,17 @@
         <div class="bg-primary text-white text-center p-4" >
             <h1>Mi Mueble</h1>
         </div>
-        <p>has escogido a {{mueble}}</p>
+        <p>El mueble {{mueble}} tiene: </p>
+        <h2>Caracteristicas</h2>
+        <ul>
+            <li>Nombre: {{mueble.name}}</li>
+            <li>Tipo: {{mueble.type}}</li>
+            <li>Material: {{mueble.materials}}</li>
+            <li>Estilo: {{mueble.styles}}</li>
+
+
+
+        </ul>
     </div>
 </body>
 </html>
