--- a/catalogo_muebles/mueblesemae/templates/index.html
+++ b/catalogo_muebles/mueblesemae/templates/index.html
@@ -16,7 +16,7 @@
         <ul>
             {% for mueble  in muebles  %}
                 <li>
-                    <a href="{{mueble}}">{{mueble}}</a>
+                    <a href="{{mueble.id}}">{{mueble}}</a>
                 </li>
             {% endfor %}
         </ul>
