--- a/catalogo_muebles/mueblesemae/templates/display_cliente.html
+++ b/catalogo_muebles/mueblesemae/templates/display_cliente.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Mi MueblesEMAE</title>
-</head>
-<body>
-    <div class="container">
-        <div class="bg-primary text-white text-center p-4" >
-            <h1>Cliente</h1>
-        </div>
-        <p>{{cliente}}</p>
-        <h2>Detalles:</h2>
-        <ul>
-            <li>Nombre: {{cliente.name}}</li>
-            <li>Apellido: {{cliente.last_name}}</li>
-            <li>Cedula: {{cliente.dni}}</li>
-            <li>Correo: {{cliente.email}}</li>
-            <li>Mueble: {{cliente.furniture}}</li>
-
-        </ul>
-    </div>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}{{cliente | capfirst}}{% endblock title %}
+{% block content %}
+    <p>{{cliente}}</p>
+    <h2>Detalles:</h2>
+    <ul>
+        <li>Nombre: {{cliente.name}}</li>
+        <li>Apellido: {{cliente.last_name}}</li>
+        <li>Cedula: {{cliente.dni}}</li>
+        <li>Correo: {{cliente.email}}</li>
+        <li>Mueble: {{cliente.furniture}}</li>
+    </ul>
+{% endblock content %}
+    
