--- a/catalogo_muebles/mueblesemae/templates/display_mueble.html
+++ b/catalogo_muebles/mueblesemae/templates/display_mueble.html
@@ -1,28 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Mi MueblesEMAE</title>
-</head>
-<body>
-    <div class="container">
-        <div class="bg-primary text-white text-center p-4" >
-            <h1>Mi Mueble</h1>
-        </div>
-        <p>El mueble {{mueble}} tiene: </p>
-        <h2>Caracteristicas</h2>
-        <ul>
-            <li>Nombre: {{mueble.name}}</li>
-            <li>Tipo: {{mueble.type}}</li>
-            <li>Material: {{mueble.materials}}</li>
-            <li>Estilo: {{mueble.styles}}</li>
-
-
-
-        </ul>
-    </div>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title  %} {{mueble | capfirst}} {% endblock title  %}
+{% block content %}
+    <p>El mueble {{mueble | capfirst}} tiene: </p>
+    <h2>Caracteristicas</h2>
+    <ul>
+        <li>Nombre: {{mueble.name}}</li>
+        <li>Tipo: {{mueble.type}}</li>
+        <li>Material: {{mueble.materials}}</li>
+        <li>Estilo: {{mueble.styles}}</li>
+    </ul>
+{% endblock content %}
