--- a/catalogo_muebles/mueblesemae/templates/index.html
+++ b/catalogo_muebles/mueblesemae/templates/index.html
@@ -1,36 +1,38 @@
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href= {% static "bootstrap.min.css" %} rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>MueblesEMAE</title>
-</head>
-<body>
-    <div class="container">
-        <div class="bg-primary text-white text-center p-4" >
-            <h1>Mi MueblesEMAE</h1>
-        </div>
-        <p>Detalles muebles</p>
-        <ul>
-            {% for mueble  in muebles  %}
-                <li>
-                    <a href="{{mueble.id}}">{{mueble}}</a>
-                </li>
-            {% endfor %}
-        </ul>
+{% extends "base.html" %}
+{% block title %}Pagina Inicial{% endblock title %}
 
-        <!--cliente-->
-        <br>
-        <p>cliente</p>
-        <ul>
-            {% for cliente  in clientes  %}
-                <li>
-                    <a href="cliente/{{cliente.id}}">{{cliente}}</a>
-                </li>
+{% block content %}
+    <h2>Muebles</h2>
+        <div class="row">
+            {% for mueble  in muebles  %}
+            <div class="col-sm-3">
+                <a href="{{mueble.id}}">{{mueble | capfirst}}</a>
+
+
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="{{mueble.picture.url}}" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+
+
+            </div>
+    
             {% endfor %}
-        </ul>
-    </div>
-</body>
-</html>
+        </div>
+
+    <!--cliente-->
+    <br>
+    <h2>cliente</h2>
+    <ul>
+        {% for cliente  in clientes  %}
+            <li>
+                <a href="cliente/{{cliente.id}}">{{cliente | capfirst}}</a>
+            </li>
+        {% endfor %}
+    </ul>
+{% endblock content %}
