--- a/catalogo_muebles/mueblesemae/static/custom.css
+++ b/catalogo_muebles/mueblesemae/static/custom.css
@@ -1,5 +1,108 @@
-img{
+.container{
+    width: 130%;
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+.logo{
     width: 100%;
-    height: 37%;
-    display: block;
+    height: 30%;
+    margin: 0%;
+}
+
+ul.lista-h{
+    margin-bottom: 0;
+    list-style: none;
+
+}
+.navbar{
+    background-color: #e4b46a; 
+
+
+}
+div.barra.p-0{
+    background-color: #e4b46a; 
+
+
+}
+div.barra.p-0 ul li{
+    display: inline-block;
+    padding: 0rem 1rem;
+    margin-bottom: 0;
+
+}
+
+
+.navbar-toggler-icon {
+    background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"%3E%3Cpath stroke="rgba%28155, 155, 155, 1%29" stroke-width="4" d="M4 7h22M4 15h22M4 23h22"/%3E%3C/svg%3E');
+    background-color: #04040424;
+    border-radius: 0.3rem;
+    padding: 0%;
+}
+
+
+/* Estilo base */
+html {
+    font-size: 16px; /* Tamaño base de 1rem */
+}
+
+body {
+    font-family: 'Roboto', sans-serif; /* Fuente moderna y legible */
+    line-height: 1.6; /* Espaciado entre líneas */
+    color: #333; /* Color de texto neutral */
+    font-size: clamp(14px, 2.5vw, 18px); /* Escalado fluido */
+    margin: 0;
+}
+
+/* Encabezados */
+h1 {
+    font-size: clamp(2rem, 4vw, 3rem); /* Escalado fluido para encabezados */
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: clamp(1.5rem, 3.5vw, 2.5rem);
+    font-weight: 600;
+    line-height: 1.3;
+}
+
+h3 {
+    font-size: clamp(1.25rem, 3vw, 2rem);
+    font-weight: 500;
+    line-height: 1.4;
+}
+
+/* Texto normal */
+p {
+    font-size: clamp(1rem, 2.5vw, 1.125rem);
+    margin-bottom: 1.5rem;
+}
+
+/* Media queries adicionales para ajustes específicos */
+@media (max-width: 768px) {
+    body {
+        font-size: 0.9rem; /* Ajuste para móviles pequeños */
+    }
+    h1, h2, h3 {
+        line-height: 1.3; /* Aumenta la legibilidad en pantallas pequeñas */
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    body {
+        font-size: 1rem; /* Ajuste para tablets */
+    }
+    h1, h2, h3 {
+        line-height: 1.4;
+    }
+}
+
+@media (min-width: 1025px){
+    body {
+        font-size: 1.125rem; /* Ajuste para escritorios */
+    }
+    h1, h2, h3 {
+        line-height: 1.5;
+    }
 }
