--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -4,13 +4,129 @@
     <link href= {% static "bootstrap.min.css" %} rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href= {% static "custom.css" %} rel="stylesheet">
+    <!-- media queries -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- jQuery, Popper.js, y Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <img class="logo" src="{% static "mueblesemaetitlefondo1.png" %}" alt="mueblesemaetitle.png">
-    <div class="container">
-        {% block content %}{% endblock content %}
-    </div>
+    <header class="header">
+        <div class="container">
+            <img class="logo" src="{% static "mueblesemaetitlefondo1.png" %}" alt="mueblesemaetitlefondo1.png">
+
+            <!-- barra navegacio -->
+            
+            
+            <nav class="navbar">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra_navegacion" aria-controls="barra_navegacion" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse "  id="barra_navegacion" style="transition: all 0.8s linear">
+                    <div class="barra p-0">
+                        <ul class="lista-h"> 
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "mueblesemae:index" %}">Muebles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#">otra cosa</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    listas
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                {% if user.is_authenticated %}
+                                <a class="nav-link" href="{% url "mueblesemae:add_mueble" %}">Añadir mueble
+                                    <i class="fa-solid fa-circle-plus"></i>
+                                </a>
+                                {% endif %}
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url "logout" %}">Salir
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                </a>
+                {% else %}
+                <a class="nav-link" href="{% url "mueblesemae:login" %}">Ingresar
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                </a>
+                {% endif %}
+                <!--login-->
+            </nav>
+            <!-- barra navegacio -->
+
+
+
+            <!-- <nav class="navbar">
+                <div class="collapse"  id="barra_navegacion" style="transition: all 0.8s linear">
+                    <ul class="lista-h"> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "mueblesemae:index" %}">Muebles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">otra cosa</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            listas
+                        </a>
+                        <li>
+                            {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url "mueblesemae:add_mueble" %}">Añadir mueble
+                                <i class="fa-solid fa-circle-plus"></i>
+                            </a>
+                            {% endif %}
+                        </li>
+                    </ul> -->
+
+                <!-- <br>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra_navegacion" aria-controls="barra_navegacion" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> -->
+                <!--login-->
+                
+        </div>
+    </header> 
+    <br>
+    <main class="main">
+        <div class="container" >
+                
+            {% block content %}{% endblock content %}
+        </div>
+    </main>
+
 </body>
 </html>
