Modificacion de navbar, imagen y creacion de footer - Edicion de css para diseno flexible

--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -14,8 +14,9 @@
 </head>
 <body>
     <header class="header">
-        <img class="logo" src="{% static "mueblesemaetitlefondo1.png" %}" alt="mueblesemaetitlefondo1.png">
-        <div class="container">
+            <img class="logo" src="{% static "mueblesemaetitlefondo1.png" %}" alt="mueblesemaetitlefondo1.png">
+        <!-- <div class="container"> -->
+            
             <!-- barra navegacio -->
             <nav class="navbar">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra_navegacion" aria-controls="barra_navegacion" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +75,7 @@
                 </a>
                 {% endif %}
             </nav>                
-        </div>
+        <!-- </div> -->
     </header> 
     <br>
     <main class="main">
