--- a/catalogo_muebles/mueblesemae/templates/display_mueble.html
+++ b/catalogo_muebles/mueblesemae/templates/display_mueble.html
@@ -6,7 +6,7 @@
     <ul>
         <li>Nombre: {{mueble.name}}</li>
         <li>Tipo: {{mueble.type}}</li>
-        <li>Material: {{mueble.materials}}</li>
-        <li>Estilo: {{mueble.styles}}</li>
+        <li>Material: {{mueble.material}}</li>
+        <li>Estilo: {{mueble.style}}</li>
     </ul>
 {% endblock content %}
