Agregacion linea elizabeth

--- a/catalogo_muebles/mueblesemae/templates/index.html
+++ b/catalogo_muebles/mueblesemae/templates/index.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     <h2>Muebles</h2>
+    <h2>Modificación Elizabeth</h2>
     <div class="row">
         {% for mueble  in muebles  %}
         <div class="col-sm-3">
