--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -29,9 +29,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url "mueblesemae:index" %}">Muebles</a>
                             </li>
+
                             <li class="nav-item">
-                                <a href="#">otra cosa</a>
+                                <a class="nav-link" href="{% url "mueblesemae:clientes" %}">Clientes</a>
                             </li>
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Dropdown
@@ -57,6 +59,13 @@
                             <li>
                                 {% if user.is_authenticated %}
                                 <a class="nav-link" href="{% url "mueblesemae:add_mueble" %}">Añadir mueble
+                                    <i class="fa-solid fa-circle-plus"></i>
+                                </a>
+                                {% endif %}
+                            </li>
+                            <li>
+                                {% if user.is_authenticated %}
+                                <a class="nav-link" href="{% url "mueblesemae:add_cliente" %}">Añadir cliente
                                     <i class="fa-solid fa-circle-plus"></i>
                                 </a>
                                 {% endif %}
