--- a/catalogo_muebles/mueblesemae/templates/display_cliente.html
+++ b/catalogo_muebles/mueblesemae/templates/display_cliente.html
@@ -8,7 +8,7 @@
         <li>Apellido: {{cliente.last_name}}</li>
         <li>Cedula: {{cliente.dni}}</li>
         <li>Correo: {{cliente.email}}</li>
-        <li>Mueble: {{cliente.furniture}}</li>
+        <li>Genero: {{cliente.get_gender_display}}</li>
     </ul>
 {% endblock content %}
     
