--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -20,29 +20,27 @@
             <!-- barra navegacio -->
             <nav class="navbar">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra_navegacion" aria-controls="barra_navegacion" aria-expanded="false" aria-label="Toggle navigation">
-                    <!-- <span class="navbar-toggler-icon"></span> -->
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                <div class="collapse "  id="barra_navegacion" style="transition: all 0.8s linear">
+                <div class="collapse"  id="barra_navegacion" style="transition: all 0.8s linear">
                     <div class="barra p-0">
                         <ul class="lista-h"> 
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url "mueblesemae:index" %}">Muebles</a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url "mueblesemae:clientes" %}">Clientes</a>
-                            </li>
-
                             <li class="nav-item dropdown">
+                                <!--CLIENTE ICON-->
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
+                                    <i class="fa-regular fa-id-card"></i>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" href="{% url "mueblesemae:clientes" %}">Cliente Tarjeta</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="{% url "mueblesemae:cliente_tabla" %}">Cliente Tabla</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
