--- a/catalogo_muebles/mueblesemae/static/custom.css
+++ b/catalogo_muebles/mueblesemae/static/custom.css
@@ -35,13 +35,17 @@ div.barra.p-0 ul li{
     padding: 0rem 1rem;
     margin-bottom: 0;
 
+
 }
 div.barra.p-0 ul li :hover{
     background: rgba(255, 255, 255, 0.629);
     border-radius: 0.4rem;
+    transition: all 0.5s linear;
 
 }
-
+/* a.nav-link.dropdown-toggle{
+    padding: 8px;
+} */
 .footer{
     background: #ddb94d24;
     padding: 0.4rem 0;
@@ -61,14 +65,10 @@ div.barra.p-0 ul li :hover{
     background-color: #f3e7c061;
     height: 4rem;
     text-align: center;
-}
-i.fa-solid.fa-bars{
+} 
+/* i.fa-solid.fa-bars{
     font-size: 2rem;
-}
-i.fa-regular.fa-id-card{
-    font-size: 1.7rem;
-}
-
+} */
 
 /* Estilo base */
 html {
@@ -80,7 +80,7 @@ body {
     line-height: 1.6; /* Espaciado entre líneas */
     color: #333; /* Color de texto neutral */
     font-size: clamp(14px, 2.5vw, 18px); /* Escalado fluido */
-    margin: 0;
+    margin: 0 auto;
 }
 
 /* Encabezados */
