--- a/catalogo_muebles/mueblesemae/templates/index.html
+++ b/catalogo_muebles/mueblesemae/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Pagina Inicial{% endblock title %}
+{% block title %}MUEBLESEMAE{% endblock title %}
 
 {% block content %}
     <h2>Muebles</h2>
