views detalle compra-rama de tienda - definicion de nombres de templates - modificacion del forms de agregar compra - creacion de tabla listado de compra

--- a/catalogo_muebles/mueblesemae/templates/lista_compras.html
+++ b/catalogo_muebles/mueblesemae/templates/lista_compras.html
@@ -52,13 +52,13 @@
                 
             </tbody>
         </table>
-        <div>
+        {% comment %} <div>
             <a href="#">Ver Detalles</a>
         </div>
         <br>
         <p>
-            Total: ${{ compra.total }}
-        </p>
+            Total: ${{ mueble.cost }}
+        </p> {% endcomment %}
 
     </div>
 
