--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -53,7 +53,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="{% url "mueblesemae:listar_compras" %}">Lista de compras</a></li>
-                                    <li><a class="dropdown-item" href="{% url "mueblesemae:nueva_compra" %}"><i class="fa-regular fa-square-plus"></i>Agregar compra</a></li>
+                                    <li><a class="dropdown-item" href="{% url "mueblesemae:ingresar_compra" %}"><i class="fa-regular fa-square-plus"></i>Agregar compra</a></li>
                                 </ul>
                             </li>
                             <li>
