--- a/catalogo_muebles/mueblesemae/templates/login_form.html
+++ b/catalogo_muebles/mueblesemae/templates/login_form.html
@@ -14,7 +14,7 @@
                     <input type="password" name="password" id="password" class="form-control">
                 </div>
                 <br>
-                <button type="submit" class="btn btn-primary">Guardar</button>
+                <button type="submit" class="btn btn-primary">Ingresar</button>
                 <a href="{% url "mueblesemae:index"  %}" class="btn btn-secondary">Regresar</a>
             </div>
         </div>
