--- a/catalogo_muebles/mueblesemae/templates/lista_compras.html
+++ b/catalogo_muebles/mueblesemae/templates/lista_compras.html
@@ -5,15 +5,18 @@
     <h2>lista de compras</h2>
     <div class="row">
         <div>
-            Fecha: {{ compra.fecha }}
         </div>
         <table class="table">
             <thead class="atributes">
                 <tr>
                     <th scope="col">#</th>
+                    <th scope="col">FECHA</th>
                     <th scope="col">ID</th>
+                    <th scope="col">CLIENTE</th>
                     <th scope="col">PRODUCTO</th>
                     <th scope="col">CATEGORIA</th>
+                    <th scope="col">DETALLES</th>
+                    
                 </tr>
             </thead>
             <tbody>
@@ -22,11 +25,19 @@
                     <tr>
                         <th scope="row">{{ forloop.counter }}</th>
                         <td>
+                            {{compra.fecha}}
+                        </td>
+
+                        <td>
                             {% for mueble in compra.muebles.all %}
                                 {{ mueble.id }}
                                 {% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </td>
+                        <th>
+                            {{compra.cliente.name}}
+                        </th>
+
 
                         <td>
                             {% for mueble in compra.muebles.all %}
@@ -41,6 +52,14 @@
                                 {% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </td>
+
+                        <td>
+                           
+                            <a href="/detalle_compra/{{compra.cliente.id }}" class="btn btn-primary">
+                                <i class="fa-solid fa-eye"></i> <!--icono-->
+                            </a>
+                            
+                        </td>
                     </tr>
                     
                 {% empty %}
@@ -52,17 +71,5 @@
                 
             </tbody>
         </table>
-        {% comment %} <div>
-            <a href="#">Ver Detalles</a>
-        </div>
-        <br>
-        <p>
-            Total: ${{ mueble.cost }}
-        </p> {% endcomment %}
-
-    </div>
-
-    <!--cliente-->
-    <br>
-    
+    </div>    
 {% endblock content %}
