--- a/catalogo_muebles/mueblesemae/templates/ingresar_compra.html
+++ b/catalogo_muebles/mueblesemae/templates/ingresar_compra.html
@@ -28,6 +28,7 @@
                     <th scope="col">ID</th>
                     <th scope="col">Producto</th>
                     <th scope="col">Categoría</th>
+                    <th scope="col">Precio Unitario</th>
                 </tr>
             </thead>
             <tbody>
