--- a/catalogo_muebles/mueblesemae/templates/lista_compras.html
+++ b/catalogo_muebles/mueblesemae/templates/lista_compras.html
@@ -2,11 +2,8 @@
 {% block title %}MUEBLESEMAE{% endblock title %}
 
 {% block content %}
-    <h2>lista de compras</h2>
+    <h2>Lista de compras</h2>
     <div class="row">
-        <div>
-            Fecha: {{ compra.fecha }}
-        </div>
         <table class="table">
             <thead class="atributes">
                 <tr>
@@ -14,6 +11,8 @@
                     <th scope="col">ID</th>
                     <th scope="col">PRODUCTO</th>
                     <th scope="col">CATEGORIA</th>
+                    <th scope="col">CLIENTE</th>
+                    <th scope="col">DETALLES</th>
                 </tr>
             </thead>
             <tbody>
@@ -41,6 +40,15 @@
                                 {% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </td>
+
+                        <td>
+                            {{ compra.cliente.name }}
+                        </td>
+
+                        <td>
+                            <a class="nav-link" href="/detalle_compra/{{ compra.cliente.id }}/{{ compra.id }}/"><i class="fa-solid fa-eye"></i></a> 
+                        </td>
+
                     </tr>
                     
                 {% empty %}
