Añdir funcion carrito-Scripts, Costo Total, Añadir funcion de confirmacion de borra cliente

--- a/catalogo_muebles/mueblesemae/templates/cliente_list.html
+++ b/catalogo_muebles/mueblesemae/templates/cliente_list.html
@@ -27,10 +27,16 @@
                             <i class="fa-solid fa-pen-fancy"></i>
                         </a>
                         <!--icono BORRAR-->
-                        <a href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
-                            <i class="fa-solid fa-trash-can"></i>
-                        </a>
-                    {% endif %} 
+                        <section>
+                            <a type="button" id ="borrar" onclick="" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
+                                <i class="fa-solid fa-trash-can"></i>
+                            </a>
+                        </section>
+
+                        {% endif %} 
+                        <section>
+                            <button type="button"> Mostrar </button>
+                        </section>
                 </div>
             </div>
         </div>        
