--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -11,10 +11,13 @@
     <!-- jQuery, Popper.js, y Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src= "{% static 'script.js' %}"> </script>
 </head>
 <body>
+    
     <header class="header">
-            <img class="logo" src="{% static "mueblesemaetitlefondo1.png" %}" alt="mueblesemaetitlefondo1.png">
+
+        <img class="logo" src="{% static "mueblesemaetitlefondo1.png" %}" alt="mueblesemaetitlefondo1.png">
         <!-- <div class="container"> -->
             
             <!-- barra navegacio -->
