Creacion de categorias

--- a/catalogo_muebles/mueblesemae/templates/display_mueble.html
+++ b/catalogo_muebles/mueblesemae/templates/display_mueble.html
@@ -5,7 +5,7 @@
     <h2>Caracteristicas</h2>
     <ul>
         <li>Nombre: {{mueble.name}}</li>
-        <li>Tipo: {{mueble.get_type_display}}</li>
+        <li>Tipo: {{categorias.get_type_display}}</li>
         <li>Material: {{mueble.get_material_display}}</li>
         <li>Estilo: {{mueble.get_style_display}}</li>
     </ul>
