--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -50,6 +50,20 @@
                                     </ul>
                                 </li>
                             {% endif %}
+
+                            <li class="nav-item dropdown">
+                                <!--MUEBLES-->
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        muebles
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" href="{% url "mueblesemae:categoria_organizacion" %}">Organización</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="fa-solid fa-shop"></i>Compras
