Creacion de Categorias-Funcional

--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -59,6 +59,22 @@
                                     <li><a class="dropdown-item" href="{% url "mueblesemae:ingresar_compra" %}"><i class="fa-regular fa-square-plus"></i>Agregar compra</a></li>
                                 </ul>
                             </li>
+
+
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-shop"></i>Categorias
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{% url "mueblesemae:categoria_organizacion" %}">Organizacion</a></li>
+                                    <li><a class="dropdown-item" href="{% url "mueblesemae:categoria_hool" %}">Hool</a></li>
+                                    <li><a class="dropdown-item" href="{% url "mueblesemae:categoria_confort" %}">Confort</a></li>
+                                </ul>
+                            </li>
+
+
+
                             <li>
                                 {% if user.is_authenticated %}
                                 <a class="nav-link" href="{% url "mueblesemae:add_mueble" %}">Añadir mueble
