arreglo de agregar compras

--- a/catalogo_muebles/mueblesemae/templates/ingresar_compra.html
+++ b/catalogo_muebles/mueblesemae/templates/ingresar_compra.html
@@ -35,10 +35,8 @@
                 {% for mueble in form.muebles.field.queryset %}
                     <tr>
                         <td>
-                            <input type="checkbox" name="{{ form.muebles.html_name }}" value="{{ mueble.cost }}"
-                                {% if mueble in form.muebles.value %}checked
-                                    
-                                {% endif %} class="product" onclick="calculateTotal()">
+                            <input type="checkbox" name="{{ form.muebles.html_name }}" value="{{ mueble.id }}"
+                                {% if mueble in form.muebles.value %}checked{% endif %} class="product" onclick="calculateTotal()">
                                 
 
                         </td>
