--- a/catalogo_muebles/mueblesemae/templates/cliente_list.html
+++ b/catalogo_muebles/mueblesemae/templates/cliente_list.html
@@ -28,15 +28,12 @@
                         </a>
                         <!--icono BORRAR-->
                         <section>
-                            <a type="button" id ="borrar" onclick="" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
+                            <a type="button" id ="borrar" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
                         </section>
 
                         {% endif %} 
-                        <section>
-                            <button type="button"> Mostrar </button>
-                        </section>
                 </div>
             </div>
         </div>        
