Funcion de carrito, sumar precios

--- a/catalogo_muebles/mueblesemae/templates/ingresar_compra.html
+++ b/catalogo_muebles/mueblesemae/templates/ingresar_compra.html
@@ -36,6 +36,7 @@
                     <tr>
                         <td>
                             <input type="checkbox" name="{{ form.muebles.html_name }}" value="{{ mueble.id }}"
+                                data-price="{{ mueble.cost }}"
                                 {% if mueble in form.muebles.value %}checked{% endif %} class="product" onclick="calculateTotal()">
                                 
 
