--- a/catalogo_muebles/mueblesemae/templates/categoria_hool.html
+++ b/catalogo_muebles/mueblesemae/templates/categoria_hool.html
@@ -16,16 +16,16 @@
                         <h5 class="card-title">{{mueble | capfirst}}</h5>
                         <p class="card-text">Tipo: {{mueble.type}} </p>
                         <!--icono VER-->
-                        <a href="{{mueble.id}}" class="btn btn-primary">
+                        <a href="/{{mueble.id}}" class="btn btn-primary">
                             <i class="fa-solid fa-eye"></i> <!--icono-->
                         </a>
                         <!--icono EDITAR-->
                         {% if user.is_authenticated %}
-                            <a href="edit_mueble/{{mueble.id}}" class="btn btn-primary">
+                            <a href="/edit_mueble/{{mueble.id}}" class="btn btn-primary">
                                 <i class="fa-solid fa-pen-fancy"></i>
                             </a>
                             <!--icono BORRAR-->
-                            <a href="delete_mueble/{{mueble.id}}" class="btn btn-danger">
+                            <a href="/delete_mueble/{{mueble.id}}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
                         {% endif %} 
