Creacion de Dialogo-Borrar

--- a/catalogo_muebles/mueblesemae/templates/cliente_list.html
+++ b/catalogo_muebles/mueblesemae/templates/cliente_list.html
@@ -28,7 +28,7 @@
                         </a>
                         <!--icono BORRAR-->
                         <section>
-                            <a type="button" id ="borrar" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
+                            <a onclick = "confirmDelete(event)" type="button" id ="borrar" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
                         </section>
