--- a/catalogo_muebles/mueblesemae/templates/index.html
+++ b/catalogo_muebles/mueblesemae/templates/index.html
@@ -14,8 +14,10 @@
                         <h5 class="card-title">{{mueble | capfirst}}</h5>
                         <p class="card-text">Tipo: {{mueble.type}} </p>
                         <!--icono VER-->
+
                         <a href="{{mueble.id}}" class="btn btn-primary">
                             <i class="fa-solid fa-eye"></i> <!--icono-->
+
                         </a>
                         <!--icono EDITAR-->
                         {% if user.is_authenticated %}
@@ -23,7 +25,7 @@
                                 <i class="fa-solid fa-pen-fancy"></i>
                             </a>
                             <!--icono BORRAR-->
-                            <a href="delete_mueble/{{mueble.id}}" class="btn btn-danger">
+                            <a onclick = "confirmDelete(event)" href="delete_mueble/{{mueble.id}}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
                         {% endif %} 
