--- a/catalogo_muebles/mueblesemae/templates/categoria_confort.html
+++ b/catalogo_muebles/mueblesemae/templates/categoria_confort.html
@@ -25,7 +25,7 @@
                                 <i class="fa-solid fa-pen-fancy"></i>
                             </a>
                             <!--icono BORRAR-->
-                            <a href="/delete_mueble/{{mueble.id}}" class="btn btn-danger">
+                            <a onclick = "confirmDelete(event)" href="/delete_mueble/{{mueble.id}}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
                         {% endif %} 
