--- a/catalogo_muebles/mueblesemae/templates/cliente_tabla.html
+++ b/catalogo_muebles/mueblesemae/templates/cliente_tabla.html
@@ -9,7 +9,7 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Cliente</th>
-                        <th scope="col">Compras</th>
+                        <th scope="col">Cedula</th>
                         <th scope="col">Edicion</th>
                     </tr>
                 </thead>
@@ -17,7 +17,7 @@
                     {% for cliente  in clientes  %}
                         <tr>
                             <th scope="row">{{ forloop.counter }}</th>
-                            <td>{{cliente.name}}</td>
+                            <td>{{cliente.name}} {{cliente.last_name}} </td>
                             <td>{{cliente.dni}}</td>
                             <td>
                                 {% if user.is_authenticated %}
@@ -25,7 +25,7 @@
                                     <i class="fa-solid fa-pen-fancy"></i>
                                 </a>
                                 <!--icono BORRAR-->
-                                <a href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
+                                <a onclick = "confirmDelete(event)" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
                                     <i class="fa-solid fa-trash-can"></i>
                                 </a>
                                 {%else%}
