Arreglos de barra de navegacion, ajustes de views

--- a/catalogo_muebles/mueblesemae/static/custom.css
+++ b/catalogo_muebles/mueblesemae/static/custom.css
@@ -6,7 +6,7 @@
 }
 .header{
     position: fixed;
-    height: 16rem;
+    height: 12rem;
     z-index: 1030;
     left: 0;
     top: 0;
@@ -62,7 +62,7 @@ div.barra.p-0 ul li :hover{
     background: #0000002e;
 }
 .navbar{
-    background-color: #f3e7c061;
+    background-color: #f3e7c0;
     height: 4rem;
     text-align: center;
 } 
