--- a/catalogo_muebles/mueblesemae/templates/base.html
+++ b/catalogo_muebles/mueblesemae/templates/base.html
@@ -21,11 +21,13 @@
         <!-- <div class="container"> -->
             
             <!-- barra navegacio -->
+
             <nav class="navbar">
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra_navegacion" aria-controls="barra_navegacion" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                <div class="collapse"  id="barra_navegacion" style="transition: all 0.8s linear">
+                <div class=""  id="barra_navegacion" style="transition: all 0.8s linear">
                     <div class="barra p-0">
                         <ul class="lista-h"> 
                             <li class="nav-item">
@@ -78,13 +80,6 @@
                             <li>
                                 {% if user.is_authenticated %}
                                 <a class="nav-link" href="{% url "mueblesemae:add_mueble" %}">Añadir mueble
-                                    <i class="fa-solid fa-circle-plus"></i>
-                                </a>
-                                {% endif %}
-                            </li>
-                            <li>
-                                {% if user.is_authenticated %}
-                                <a class="nav-link" href="{% url "mueblesemae:add_cliente" %}">Añadir cliente
                                     <i class="fa-solid fa-circle-plus"></i>
                                 </a>
                                 {% endif %}
