--- a/catalogo_muebles/mueblesemae/templates/cliente_list.html
+++ b/catalogo_muebles/mueblesemae/templates/cliente_list.html
@@ -3,6 +3,11 @@
 
 {% block content %}
     <h2>Clientes</h2>
+    {% if user.is_authenticated %}
+    <a class="nav-link" href="{% url "mueblesemae:add_cliente" %}">Añadir cliente
+        <i class="fa-solid fa-circle-plus"></i>
+    </a>
+    {% endif %}
     <div class="row">
         {% for cliente  in clientes  %}
         <div class="col-sm-3">
