--- a/catalogo_muebles/mueblesemae/templates/index.html
+++ b/catalogo_muebles/mueblesemae/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}MUEBLESEMAE{% endblock title %}
 
 {% block content %}
-    <h2>Muebles</h2>
+    <h2>Destacados</h2>
     <div class="row">
         {% for mueble  in muebles  %}     
 
@@ -12,19 +12,25 @@
                     <img class="card-img-top" src="{{mueble.picture.url}}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">{{mueble | capfirst}}</h5>
-                        <p class="card-text">Tipo: {{mueble.type}} </p>
-                        <!--icono VER-->
-
+                        <p class="card-text">Precio: {{mueble.cost}} $</p>
+                        {% if mueble.type == "C" %}
+                        <p>{{ descripcion1 }} </p>
+                        {% elif mueble.type == "O" %} 
+                        <p>{{ descripcion2 }} </p>
+                        {% elif mueble.type == "H" %} 
+                        <p>{{ descripcion3 }} </p>
+                        {% endif %} 
+                        <!--Icono VER-->
                         <a href="{{mueble.id}}" class="btn btn-primary">
                             <i class="fa-solid fa-eye"></i> <!--icono-->
 
                         </a>
-                        <!--icono EDITAR-->
+                        <!--Icono EDITAR-->
                         {% if user.is_authenticated %}
                             <a href="edit_mueble/{{mueble.id}}" class="btn btn-primary">
                                 <i class="fa-solid fa-pen-fancy"></i>
                             </a>
-                            <!--icono BORRAR-->
+                            <!--Icono BORRAR-->
                             <a onclick = "confirmDelete(event)" href="delete_mueble/{{mueble.id}}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
@@ -34,8 +40,6 @@
             </div>       
         {% endfor %}
     </div>
-
-    <!--cliente-->
     <br>
     
 {% endblock content %}
