detalles finales del proyecto v1

--- a/catalogo_muebles/mueblesemae/templates/display_cliente.html
+++ b/catalogo_muebles/mueblesemae/templates/display_cliente.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{cliente | capfirst}}{% endblock title %}
 {% block content %}
-    <p>{{cliente}}</p>
-    <h2>Detalles:</h2>
+    <h2>Detalles Cliente:</h2>
     <ul>
         <li>Nombre: {{cliente.name}}</li>
         <li>Apellido: {{cliente.last_name}}</li>
