--- a/catalogo_muebles/mueblesemae/templates/categoria_confort.html
+++ b/catalogo_muebles/mueblesemae/templates/categoria_confort.html
@@ -2,20 +2,16 @@
 {% block title %}MUEBLESEMAE{% endblock title %}
 
 {% block content %}
-    <h2>Muebles</h2>
-    <div class="row">
+    <h1>CONFORT</h1>
+    <div class="row justify-content-center">
         {% for mueble  in muebles  %}
             {% if mueble.type == "C" %}
-                
-            
-            <div class="col-sm-3">
-                <br>
-                <div class="card">
-                    <img class="card-img-top" src="{{mueble.picture.url}}" alt="Card image cap">
+            <div class="row row-cols-1 row-cols-md-1 g-2">
+                <div class="col">
+                  <div class="card">
+                    <img src="{{mueble.picture.url}}" class="card-img-top" style="width: 60rem; height: 37rem;" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">{{mueble | capfirst}}</h5>
-                        <p class="card-text">Tipo: {{mueble.type}} </p>
-                        <!--icono VER-->
+                        <h5 class="card-title">{{mueble | capfirst}}</h5>                        <!--icono VER-->
                         <a href="/{{mueble.id}}" class="btn btn-primary">
                             <i class="fa-solid fa-eye"></i> <!--icono-->
                         </a>
@@ -29,9 +25,11 @@
                                 <i class="fa-solid fa-trash-can"></i>
                             </a>
                         {% endif %} 
+                      {% comment %} <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> {% endcomment %}
                     </div>
+                  </div>
                 </div>
-            </div>  
+            </div>
             {% endif %}      
         {% endfor %}
     </div>
